--- a/public/css/homeforms.css
+++ b/public/css/homeforms.css
@@ -30,7 +30,7 @@ body>main {
   display: grid;
   grid-template-columns:[line1] 20vw [line2] 10vw [line3] 10vw [line4] 20vw [line5] 10vw [line6] 10vw [line7] 20vw [line8] ;
   grid-template-rows: [row1] 25% [row2] auto [row3] 25% [row4] ;
-  background-image: url("/image/chica1.png");
+  background-image: url("../image/chica1.png");
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
