Modificaciones en archivos css y JS

--- a/public/css/homeforms.css
+++ b/public/css/homeforms.css
@@ -5,7 +5,7 @@ body>footer {
     flex-wrap: wrap;
 }
 body>header {
- display: flex;
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
@@ -30,11 +30,11 @@ body>main {
   display: grid;
   grid-template-columns:[line1] 20vw [line2] 10vw [line3] 10vw [line4] 20vw [line5] 10vw [line6] 10vw [line7] 20vw [line8] ;
   grid-template-rows: [row1] 25% [row2] auto [row3] 25% [row4] ;
-  background-image: url("../image/chica1.png");
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center center;
-
+  position: relative;
+  height: 500px;
 }
 body > main > button {
   grid-column: line7 / line8;
